class 15a test updated with images

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <h1>Football Shirt Generator</h1>
     <form id="shirt-form">
-      <label for="nation">Would you prefer European or South American?</label>
+      <label for="nation">Would you prefer European or Rest of the World?</label>
       <select id="nation" name="nation">
         <option value="European">European</option>
-        <option value="South American">South American</option>
+        <option value="Rest of the World">Rest of the World</option>
       </select>
 
       <label for="decade">Would you prefer modern or retro?</label>
